# agrad.cpp

./: .gitignore  CMakeLists.txt  README.md  cmake_clean.cmake  main.cpp  visualize.cpp
agrad/: Value.cpp  Value.hpp  ValueGraph.hpp  tests.cpp
data/: DataLoader.hpp  gen_data.py  requirements.txt
nn/: Layer.hpp  MLP.hpp  Module.hpp  Neuron.hpp  Visualization.hpp
nn/test/: LayerTest.cpp  MLPTest.cpp  NeuronTest.cpp
